<resources>
    <string name="app_name">Popular Movies</string>
    <string name="movie_poster">movie poster</string>
    <string name="title">Title:</string>
    <string name="user_rating">User Rating:</string>
    <string name="release_date">Release Date:</string>
    <string name="description">Overview:</string>
    <string name="reviews">Reviews</string>
    <string name="trailers">Trailers</string>
    <string name="add_favorite">add to Favorite</string>
    <string name="remove_favorite">remove from Favorite</string>
</resources>
