<?xml version="1.0" encoding="utf-8"?>
<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:layout_margin="16dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".DetailActivity">

        <ImageView
            android:id="@+id/image_iv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:contentDescription="@string/movie_poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/title_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/title"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/title_tv"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/title_tv" />

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/title_tag"
            app:layout_constraintTop_toBottomOf="@+id/image_iv" />

        <TextView
            android:id="@+id/user_rating_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/user_rating"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/user_rating_tv"
            app:layout_constraintEnd_toStartOf="@+id/user_rating_tv"
            app:layout_constraintRight_toLeftOf="@+id/user_rating_tv"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/user_rating_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/user_rating_tag"
            app:layout_constraintTop_toBottomOf="@+id/title_tv" />

        <TextView
            android:id="@+id/release_date_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/release_date"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/release_date_tv"
            app:layout_constraintEnd_toStartOf="@+id/release_date_tv"
            app:layout_constraintRight_toLeftOf="@+id/release_date_tv"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/release_date_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/release_date_tag"
            app:layout_constraintTop_toBottomOf="@+id/user_rating_tv" />


        <TextView
            android:id="@+id/description_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/description"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/description_tv"
            app:layout_constraintEnd_toStartOf="@+id/description_tv"
            app:layout_constraintRight_toLeftOf="@+id/description_tv"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/description_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/description_tag"
            app:layout_constraintTop_toBottomOf="@+id/release_date_tv" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="top" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>